Add more options that were missing

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -316,6 +316,8 @@
   "config.rei.options.layout.boundaries.desc": "Declare the boundaries of the panel. Useful to limit the columns / rows displayed on screen.",
   "config.rei.options.layout.location": "Location",
   "config.rei.options.layout.location.desc": "Change the location of the panel. The entire REI setup may be mirrored horizontally, including the list and all widgets.",
+  "config.rei.options.layout.hide_when_idle": "Hide When Idle",
+  "config.rei.options.layout.hide_when_idle.desc": "Hide the panel when search is not active.",
   "config.rei.value.layout.location.left": "Left",
   "config.rei.value.layout.location.right": "Right",
   "config.rei.options.groups.accessibility.display": "Display",
@@ -330,6 +332,13 @@
   "config.rei.value.accessibility.scrollbar_visibility.never": "Always Invisible",
   "config.rei.options.accessibility.clickable_recipe_arrows": "Clickable Recipe Arrows",
   "config.rei.options.accessibility.clickable_recipe_arrows.desc": "Click on recipe arrows to see all recipes in the target category.",
+  "config.rei.options.groups.accessibility.features": "Features",
+  "config.rei.options.accessibility.vanilla_recipe_book": "Vanilla Recipe Book",
+  "config.rei.options.accessibility.vanilla_recipe_book.desc": "Toggle the vanilla recipe book. This option is not designed for Modpack developers, as users should be the one to decide whether to use the vanilla recipe book.",
+  "config.rei.options.accessibility.status_effects_location": "Status Effects Location",
+  "config.rei.options.accessibility.status_effects_location.desc": "The location of the status effects. By vanilla, the status effects are placed on the right, but this can be changed to the left.",
+  "config.rei.value.accessibility.status_effects_location.left": "Left",
+  "config.rei.value.accessibility.status_effects_location.right": "Right",
   "config.rei.options.groups.favorites.favorites": "Favorites",
   "config.rei.options.favorites.mode": "Mode",
   "config.rei.options.favorites.mode.desc": "Favorite different entries on the opposite side of the entry panel. The favorites are persistent across reloads, and act as a quick access to things you are working on.\nSimply press \"A\", or drag and drop entries to add / remove an entry from favorites.",
@@ -388,6 +397,8 @@
   "config.rei.options.groups.filtering.advanced": "Advanced",
   "config.rei.options.filtering.filter_displays": "Filter Displays",
   "config.rei.options.filtering.filter_displays.desc": "Apply filtering rules to determine the visibility of displays. Displays with all entries filtered will be hidden.",
+  "config.rei.options.filtering.merge_displays": "Merge Displays",
+  "config.rei.options.filtering.merge_displays.desc": "Merge displays with the same recipe. This is useful for unifying recipes.",
   "config.rei.options.groups.list.entries": "Entries",
   "config.rei.options.list.display_mode": "Display Mode",
   "config.rei.options.list.display_mode.desc": "The way entries are laid out. Paginated mode displays entries in pages, where there are buttons to traverse the different pages. Scrolled mode displays entries in a vertical list.",
@@ -407,6 +418,7 @@
   "config.rei.options.list.focus_mode.desc": "How the focus state of the entries will be presented. By default, REI follows vanilla and highlights the slot.",
   "config.rei.value.list.focus_mode.highlighted": "Highlighted",
   "config.rei.value.list.focus_mode.zoomed": "Zoomed",
+  "config.rei.options.groups.list.collapsible_groups": "Collapsible Groups",
   "config.rei.options.groups.debug.performance": "Performance",
   "config.rei.options.debug.plugins_performance": "Plugins Performance",
   "config.rei.options.debug.plugins_performance.desc": "Detailed break-down of plugins' reload times. This is very useful in debugging the performance after loaded into a world.",
