Remove old config logic, replace with new Config GUI completely

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -405,6 +405,8 @@
   "config.rei.options.search.async_search.partition_size": "Partition Size",
   "config.rei.options.search.async_search.patch_thread_crash": "Patch Thread Crash",
   "config.rei.options.groups.filtering.filtering": "Filtering",
+  "config.rei.options.filtering.categories": "Manage Categories",
+  "config.rei.options.filtering.categories.desc": "Reorder, toggle, and configure categories. This is useful for organizing entries, and hiding entries you do not need.",
   "config.rei.options.filtering.customized_filtering": "Customized Filtering",
   "config.rei.options.filtering.customized_filtering.desc": "Create filtering rules to hide / show specific entries from the entry list.",
   "config.rei.options.groups.filtering.advanced": "Advanced",
@@ -458,5 +460,33 @@
   "config.rei.texts.configure": "Configure...",
   "config.rei.texts.details": "Details...",
   "config.rei.texts.reload": "Reload...",
-  "config.rei.texts.requires_level": "Load Level First!"
+  "config.rei.texts.requires_level": "Load Level First!",
+  "config.roughlyenoughitems.configureCategories.title": "Configuring Categories",
+  "config.roughlyenoughitems.configureCategories.visibility.true": "Enabled",
+  "config.roughlyenoughitems.configureCategories.visibility.false": "Disabled",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Configuring Quick Craft Categories",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Toggle",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Available for Quick Craft",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Excluded from Quick Craft",
+  "config.roughlyenoughitems.filteringScreen": "Customized Filtering",
+  "config.roughlyenoughitems.filteringRulesScreen": "Customized Filtering Rules",
+  "config.roughlyenoughitems.filteringRulesScreen.new": "Create Filtering Rule",
+  "config.roughlyenoughitems.filteringRulesScreen.delete": "Delete",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Try Dragging!",
+  "config.roughlyenoughitems.filteredEntries.selectAll": "Select All",
+  "config.roughlyenoughitems.filteredEntries.selectNone": "Unselect All",
+  "config.roughlyenoughitems.filteredEntries.hide": "Hide Selected",
+  "config.roughlyenoughitems.filteredEntries.show": "Show Selected",
+  "rule.roughlyenoughitems.filtering.manual": "Manual Filtering",
+  "rule.roughlyenoughitems.filtering.manual.subtitle": "Manually select what to hide and show.",
+  "rule.roughlyenoughitems.filtering.search": "Search Filtering",
+  "rule.roughlyenoughitems.filtering.search.subtitle": "Filter using search filters.",
+  "rule.roughlyenoughitems.filtering.search.filter": "Search Filter:",
+  "rule.roughlyenoughitems.filtering.search.show": "Show / Hide:",
+  "rule.roughlyenoughitems.filtering.search.show.true": "Show",
+  "rule.roughlyenoughitems.filtering.search.show.false": "Hide",
+  "rule.roughlyenoughitems.filtering.basic": "Basic Plugin Filtering",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filter entries by REI plugins. This is not configurable here.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Tag Filtering",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Filter entries by 'c:hidden_from_recipe_viewers'. This is not configurable here."
 }
