Rename keybinds category to input, add category descriptions

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -231,15 +231,21 @@
   "_comment": "Config Tooltips",
   "config.roughlyenoughitems.title": "Roughly Enough Items Config",
   "config.rei.categories.appearance": "Appearance",
-  "config.rei.categories.keybinds": "Keybinds",
-  "config.rei.categories.cheats": "Cheats",
+  "config.rei.categories.appearance.desc": "Interface theming, style, tooltips",
+  "config.rei.categories.input": "Input",
+  "config.rei.categories.input.desc": "Keybindings, input methods",
   "config.rei.categories.layout": "Layout",
+  "config.rei.categories.layout.desc": "Widgets, boundaries",
   "config.rei.categories.accessibility": "Accessibility",
-  "config.rei.categories.favorites": "Favorites",
-  "config.rei.categories.performance": "Performance",
-  "config.rei.categories.search": "Search",
+  "config.rei.categories.accessibility.desc": "Vision, features",
   "config.rei.categories.filtering": "Filtering",
+  "config.rei.categories.filtering.desc": "Categories, entries filtering",
   "config.rei.categories.list": "List",
+  "config.rei.categories.list.desc": "List order, zoom, collapsible groups",
+  "config.rei.categories.favorites": "Favorites",
+  "config.rei.categories.search": "Search",
+  "config.rei.categories.cheats": "Cheats",
+  "config.rei.categories.performance": "Performance",
   "config.rei.categories.debug": "Debug",
   "config.rei.categories.flags": "Feature Flags",
   "config.rei.categories.reset": "Reload & Reset",
@@ -264,23 +270,23 @@
   "config.rei.options.appearance.append_mod_names.desc": "Appends the containing namespace for entries. The appended line will be in italisised light blue.",
   "config.rei.options.appearance.append_favorites_hint": "Append Favorites Hint",
   "config.rei.options.appearance.append_favorites_hint.desc": "Shows a hint on how to favorite an entry, or a recipe.",
-  "config.rei.options.groups.keybinds.keybinds": "Keybinds",
-  "config.rei.options.keybinds.recipe": "View Recipes",
-  "config.rei.options.keybinds.usage": "View Usages",
-  "config.rei.options.keybinds.hide": "Show / Hide REI",
-  "config.rei.options.keybinds.previous_page": "Navigate to Previous Page",
-  "config.rei.options.keybinds.next_page": "Navigate to Next Page",
-  "config.rei.options.keybinds.focus_search": "Focus Search Field",
-  "config.rei.options.keybinds.copy_recipe_id": "Copy Recipe Identifier",
-  "config.rei.options.keybinds.copy_recipe_id.desc": "Copy a recipe's identifier by pressing the keybind, while hovering over a recipe's info button (shown with \"+\", or \"?\").",
-  "config.rei.options.keybinds.favorite": "Favorite Entry",
-  "config.rei.options.keybinds.export_image": "Export Image",
-  "config.rei.options.keybinds.export_image.desc": "Export a recipe as an image by pressing the keybind, while hovering over a recipe.",
-  "config.rei.options.keybinds.back": "Back",
-  "config.rei.options.keybinds.back.desc": "Quickly navigate back to the previous recipes by pressing the keybind.",
-  "config.rei.options.groups.keybinds.advanced": "Advanced",
-  "config.rei.options.keybinds.use_native_keybinds": "Use Native Keybinds",
-  "config.rei.options.keybinds.use_native_keybinds.desc": "Instead of listing the keybindings in this configuration menu, create vanilla Minecraft-like keybinds in the Controls screen. Restarting Minecraft is required to disable this option.\nNote that Minecraft-like keybinds suffer from conflicts and lack of support for modifier keys (Fabric).",
+  "config.rei.options.groups.input.keybinds": "Keybinds",
+  "config.rei.options.input.recipe": "View Recipes",
+  "config.rei.options.input.usage": "View Usages",
+  "config.rei.options.input.hide": "Show / Hide REI",
+  "config.rei.options.input.previous_page": "Navigate to Previous Page",
+  "config.rei.options.input.next_page": "Navigate to Next Page",
+  "config.rei.options.input.focus_search": "Focus Search Field",
+  "config.rei.options.input.copy_recipe_id": "Copy Recipe Identifier",
+  "config.rei.options.input.copy_recipe_id.desc": "Copy a recipe's identifier by pressing the keybind, while hovering over a recipe's info button (shown with \"+\", or \"?\").",
+  "config.rei.options.input.favorite": "Favorite Entry",
+  "config.rei.options.input.export_image": "Export Image",
+  "config.rei.options.input.export_image.desc": "Export a recipe as an image by pressing the keybind, while hovering over a recipe.",
+  "config.rei.options.input.back": "Back",
+  "config.rei.options.input.back.desc": "Quickly navigate back to the previous recipes by pressing the keybind.",
+  "config.rei.options.groups.input.advanced": "Advanced",
+  "config.rei.options.input.use_native_keybinds": "Use Native Keybinds",
+  "config.rei.options.input.use_native_keybinds.desc": "Instead of listing the keybindings in this configuration menu, create vanilla Minecraft-like keybinds in the Controls screen. Restarting Minecraft is required to disable this option.\nNote that Minecraft-like keybinds suffer from conflicts and lack of support for modifier keys (Fabric).",
   "config.rei.options.groups.cheats.cheats": "Cheats",
   "config.rei.options.cheats.mode": "Mode",
   "config.rei.options.cheats.mode.desc": "Cheats mode allows you to grab items from the side. This requires operator permission. The /give command would be used as a fallback if REI is not installed on the server.",
