Implement Config Search

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -462,6 +462,7 @@
   "config.rei.value.trueFalse.true": "True",
   "config.rei.value.enabledDisabled.false": "Disabled",
   "config.rei.value.enabledDisabled.true": "Enabled",
+  "config.rei.texts.search_options": "Search options...",
   "config.rei.texts.preview": "Preview...",
   "config.rei.texts.configure": "Configure...",
   "config.rei.texts.details": "Details...",
